--- a/2_foodManagement/foodManagement.html
+++ b/2_foodManagement/foodManagement.html
@@ -1,5 +1,4 @@
 <!--food/index--> 
-<script src="./sessionstorage.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -42,7 +41,7 @@
 								<div class="form">
 									<div class="row">
 									<div class="col-md-12">
-										<a class="btn col-md-12 btn-lg btn-demo" href="foodcheck.php">Food Check</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="foodCheckin.html">Food Check</a><br>
 										<a class="btn col-md-12 btn-lg btn-demo" href="register_food_1.php">Add Meal</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancel_food_1.php">Cancel Meal</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancel_via_phone.php">Cancel Meal by phone No</a><br>
@@ -71,5 +70,6 @@
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/clockpicker.js"></script>
 <script src="js/custom.js"></script>
+<script src="./sessionstorage.js"></script>
 </body>
 </html>
