--- a/4_adhyayanManagement/adhyayanManagement.html
+++ b/4_adhyayanManagement/adhyayanManagement.html
@@ -1,5 +1,5 @@
 <!-- roommgmt -->
-<script src="./sessionstorage.js"></script>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -42,18 +42,10 @@
 								<div class="form">
 									<div class="row">
 									<div class="col-md-12">
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="checkin_status_report.php">Check-in Status Report</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="checkout_status_report.php">Check-out Status Report</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="guest_occupancy_report.php">Current Guest Occupancy Report</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="room_via_phone.php">Room Booking - By Admin</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="allocate_room_manually.php">Complete manual allocation of Rooms</a>
-										<a class="btn col-md-12 btn-lg btn-demo" href="checkin.php">Mumukshu Check-in</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="checkout.php">Mumukshu Check-out</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="blockroom.php">Block Room/s</a>
-										<a class="btn col-md-12 btn-lg btn-demo" href="unblockroom.php">Unblock Room/s</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="changeroomtype.php">Change Room Type</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="blockrc.php">Block Research Centre Booking</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="unblockrc.php">Unblock Research Centre Booking</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="addAdhyayan.html">Add New Adhyayan</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="editAdhyayan.html">Edit Existing Adhyayan</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="summaryAdhyayan.html">Adhyayan Summary Report</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="waitlistAdhyayan.html">Adhyayan Waitlist Report</a>
 									</div>	
                                 </form>
 							</div>
@@ -77,6 +69,9 @@
 <script src="js/plugin.js"></script>
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/clockpicker.js"></script>
-<script src="js/custom.js"></script>
+
 </body>
 </html>
+
+<script src="js/custom.js"></script>
+<script src="./sessionstorage.js"></script>
