--- a/2_foodManagement/foodManagement.html
+++ b/2_foodManagement/foodManagement.html
@@ -42,8 +42,8 @@
 									<div class="row">
 									<div class="col-md-12">
 										<a class="btn col-md-12 btn-lg btn-demo" href="foodCheckin.html">Food Check</a><br>
-										<a class="btn col-md-12 btn-lg btn-demo" href="register_food_1.php">Add Meal</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancel_food_1.php">Cancel Meal</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="addMeal.html">Add Meal</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancelMeal.html">Cancel Meal</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancel_via_phone.php">Cancel Meal by phone No</a><br>
 										<a class="btn col-md-12 btn-lg btn-demo" href="admin_report.php">Food Report</a><br>
 									</div>	
