--- a/3_gateManagement/gateManagement.html
+++ b/3_gateManagement/gateManagement.html
@@ -5,13 +5,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetch Data Example</title>
+    <title>Gate Entry</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Card Data</h1>
-    <div id="card-data"></div>
+    <h1>Gate Entry</h1>
+    <form id="gateEntryForm">
+      <button type="submit">Mark On-Premises</button>
+    </form>
+
+    <p id="responseMessage"></p>
 
     <script src="gateManagement.js"></script>
   </body>
-  <script src="./sessionstorage.js"></script>
 </html>
