--- a/2_foodManagement/foodManagement.html
+++ b/2_foodManagement/foodManagement.html
@@ -44,8 +44,12 @@
 										<a class="btn col-md-12 btn-lg btn-demo" href="foodCheckin.html">Food Check</a><br>
 										<a class="btn col-md-12 btn-lg btn-demo" href="addMeal.html">Add Meal</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancelMeal.html">Cancel Meal</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancel_via_phone.php">Cancel Meal by phone No</a><br>
-										<a class="btn col-md-12 btn-lg btn-demo" href="admin_report.php">Food Report</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancel_via_phone.html">Cancel Meal by phone No</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="admin_report.html">Food Report</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="addMenu.html">Add Menu</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchMenu.html">Fetch Menu</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="updateMenu.html">Update Menu</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="deleteMenu.html">Delete Menu</a><br>
 									</div>	
                                 </form>
 							</div>
