--- a/2_foodManagement/foodManagement.html
+++ b/2_foodManagement/foodManagement.html
@@ -41,11 +41,16 @@
 								<div class="form">
 									<div class="row">
 									<div class="col-md-12">
-										<a class="btn col-md-12 btn-lg btn-demo" href="foodCheckin.html">Food Check</a><br>
-										<a class="btn col-md-12 btn-lg btn-demo" href="addMeal.html">Add Meal</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancelMeal.html">Cancel Meal</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancel_via_phone.html">Cancel Meal by phone No</a><br>
-										<a class="btn col-md-12 btn-lg btn-demo" href="admin_report.html">Food Report</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="issuePlate.html">Issue Plate</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="physicalPlatesIssued.html">Physical Plates Issued</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchPhysicalPlateIssued.html">Fetch Physical Plate Issued</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="bookFoodForMumukshu.html">Book Food For Mumukshu</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodByCard.html">Cancel Meal by Card</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodByMob.html">Cancel Meal by phone No</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="bookFoodForGuest.html">Book Food For Guest</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodForGuest.html">Cancel Food For Guest</a><br>
+										<a class="btn col-md-12 btn-lg btn-demo" href="foodReport.html">Food Report</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="foodReportDetails.html">Food Report Details</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="addMenu.html">Add Menu</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="fetchMenu.html">Fetch Menu</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="updateMenu.html">Update Menu</a><br>
