Fetch-All Adhyayna - Part 1

--- a/4_adhyayanManagement/adhyayanManagement.html
+++ b/4_adhyayanManagement/adhyayanManagement.html
@@ -37,7 +37,7 @@
             	<div class="whitesec">
                     <div class="inner-padding">
                     	<div class="frm-head">
-                          <h4><b><u>Room Management </u></b></h4>
+                          <h4><b><u>Adhyayan Management </u></b></h4>
 							   </div>
 								<div class="form">
 									<div class="row">
