--- a/1_cardManagement/createCard.html
+++ b/1_cardManagement/createCard.html
@@ -137,6 +137,6 @@
 <script src="js/clockpicker.js"></script>
 <script src="js/custom.js"></script>
 <script src="addCard.js"></script>
-<script src="./sessionstorage.js"></script>
+<script src="/sessionstorage.js"></script>
 </body>
 </html>
