--- a/1_cardManagement/searchCard.html
+++ b/1_cardManagement/searchCard.html
@@ -44,6 +44,6 @@
     <div id="detailed-data"></div>
 
     <script src="searchCard.js"></script>
-    <script src="../sessionstorage.js"></script>
+    <script src="/sessionstorage.js"></script>
   </body>
 </html>
