--- a/2_foodManagement/issuePlate.html
+++ b/2_foodManagement/issuePlate.html
@@ -74,7 +74,7 @@
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/clockpicker.js"></script>
 <script src="js/custom.js"></script>
-<script src="./sessionstorage.js"></script>
+<script src="/sessionstorage.js"></script>
 <script src="foodCheckin.js"></script>
 </body>
 </html>
