--- a/0_adminManagement/adminManagement.html
+++ b/0_adminManagement/adminManagement.html
@@ -70,7 +70,7 @@
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/clockpicker.js"></script>
 <script src="js/custom.js"></script>
-<script src="./sessionstorage.js"></script>
+<script src="/sessionstorage.js"></script>
 </body>
 </html>
 
