--- a/0_adminManagement/fetchRoles.html
+++ b/0_adminManagement/fetchRoles.html
@@ -1,16 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="favicon.ico" />
     <title>Fetch Roles</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Bootstrap core CSS -->
+    <link
+      href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
+      rel="stylesheet"
+    />
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/plugin.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="css/clockpicker.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Roles List</h1>
-
-    <ul id="rolesList"></ul>
-
+    <div
+      class="fullheight"
+      style="
+        background: url(images/background-img.jpg) no-repeat center center;
+        background-size: cover;
+      "
+    >
+      <div class="header">
+        <div class="container">
+          <div class="logo">
+            <a href="javascript:void(0);"
+              ><img src="images/logo.png" alt="" title=""
+            /></a>
+          </div>
+          <div class="logout">
+            <a href="javascript:void(0);" onClick="history.go(-1);"
+              ><img src="images/user.png" alt="" title="" /> Back&nbsp;&nbsp;</a
+            >
+            <a href="index.html"
+              ><img src="images/user.png" alt="" title="" /> Home</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="middlecontent">
+        <div class="whitesec">
+          <div class="frm-head">
+            <h1><br />Fetch Roles</h1>
+          </div>
+          <div class="form">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="table">
+                  <table
+                    id="rolesList"
+                    class="table table-striped table-bordered"
+                  >
+                    <thead>
+                      <tr>
+                        <th>Roles List</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- Rows will be populated by JavaScript -->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <p>
+            © 2022
+            <a href="#" target="_blank"
+              >Shrimad Rajchandra Aatma Tatva Research Centre</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Bootstrap core JavaScript
+	================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/373a347df2.js"></script>
+    <script src="js/plugin.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/clockpicker.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="/sessionstorage.js"></script>
     <script src="fetchRoles.js"></script>
   </body>
 </html>
