--- a/2_foodManagement/physicalPlatesIssued.html
+++ b/2_foodManagement/physicalPlatesIssued.html
@@ -1,33 +1,91 @@
+<!--food/dinnercheck_read--> 
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Physical Plates Issued</title>
-  </head>
-  <body>
-    <h1>Physical Plates Issued</h1>
-    <form id="physicalPlatesForm">
-      <label for="plateDate">Date:</label>
-      <input type="date" id="plateDate" name="plateDate" required />
-
-      <label for="plateType">Plate Type:</label>
-      <select id="plateType" name="plateType" required>
-        <option value="breakfast">Breakfast</option>
-        <option value="lunch">Lunch</option>
-        <option value="dinner">Dinner</option>
-        <option value="tea">Tea</option>
-        <option value="coffee">Coffee</option>
-      </select>
-
-      <label for="plateCount">Count:</label>
-      <input type="number" id="plateCount" name="plateCount" min="1" required />
-
-      <button type="submit">Add Physical Plates Issued</button>
-    </form>
-
-    <div id="responseMessage"></div>
-
-    <script src="physicalPlatesIssued.js"></script>
-  </body>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="favicon.ico">
+<title>Physical Plates Issued</title>
+<!-- Bootstrap core CSS -->
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+<link href="css/plugin.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="css/clockpicker.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+<div class="fullheight" style="background:url(images/background-img.jpg) no-repeat center center; background-size: cover;">
+        <div class="header">
+            <div class="container">
+                <div class="logo">
+                    <a href="javascript:void(0);"><img src="images/logo.png" alt="" title=""></a>
+                </div>
+                    <div class="logout">
+                        <a href="index.html"><img src="images/user.png" alt="" title=""> Home</a>
+                    </div>
+            </div>
+    	</div>
+        <div class="middlecontent">
+        	<div class="container">
+            	<div class="whitesec">
+                    <div class="inner-padding">
+                    	<div class="frm-head">
+                          <h4><b><u>Physical Plates Issued</span></u></b></h4>
+							   </div>
+                               <div class="form" >
+                                <form id="physicalPlatesForm">
+									<div class="row">
+                    <div class="col-md-12">
+                    <label for="plateDate">Date:</label>
+                    <input type="date" id="plateDate" name="plateDate" required />
+                  </div>
+                  <div class="col-md-12">
+                    <label for="plateType">Plate Type:</label>
+                    <select id="plateType" name="plateType" required>
+                      <option value="breakfast">Breakfast</option>
+                      <option value="lunch">Lunch</option>
+                      <option value="dinner">Dinner</option>
+                      <option value="tea">Tea</option>
+                      <option value="coffee">Coffee</option>
+                    </select>
+                  </div>
+                  <div class="col-md-12">
+                    <label for="plateCount">Count:</label>
+                    <input type="number" id="plateCount" name="plateCount" min="1" required />
+                  </div>
+              
+                    <button type="submit">Add Physical Plates Issued</button>
+                                </form>
+                                <div id="responseMessage"></div>
+							</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+        	<div class="container">
+            	<p>© 2022 <a href="#" target="_blank">Shrimad Rajchandra Aatma Tatva Research Centre</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://use.fontawesome.com/373a347df2.js"></script>
+<script src="js/plugin.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/clockpicker.js"></script>
+<script src="js/custom.js"></script>
+<script src="/sessionstorage.js"></script>
+<script src="physicalPlatesIssued.js"></script>
+</body>
 </html>
