--- a/adminhome.html
+++ b/adminhome.html
@@ -18,7 +18,7 @@
 <link href="css/clockpicker.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
-<script src="./sessionstorage.js"></script>
+
 <body>
 <div class="fullheight" style="background:url(images/background-img.jpg) no-repeat center center; background-size: cover;">
         <div class="header">
@@ -27,7 +27,7 @@
                     <a href="javascript:void(0);"><img src="images/logo.png" alt="" title=""></a>
                 </div>
                     <div class="logout">
-                        <a href="logout.php"><img src="images/user.png" alt="" title=""> Logout</a>
+                        <a href="index.html"><img src="images/user.png" alt="" title=""> Logout</a>
                     </div>
             </div>
     	</div>
@@ -73,6 +73,6 @@
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/clockpicker.js"></script>
 <script src="js/custom.js"></script>
-
+<script src="./sessionstorage.js"></script>
 </body>
 </html>
