--- a/4_adhyayanManagement/fetchAllAdhyayan.html
+++ b/4_adhyayanManagement/fetchAllAdhyayan.html
@@ -35,15 +35,14 @@
 <link href="css/clockpicker.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-    <div class="fullheight" style="background:url(images/background-img.jpg) no-repeat center center; background-size: cover;">
+<body background="images/background-img.jpg">
             <div class="header">
                 <div class="container">
                     <div class="logo">
-                        <a href="javascript:void(0);"><img src="images/logo.png" alt="" title=""></a>
+                        <a href="javascript:void(0);"><img src="images/logo - Copy.png" alt="" title=""></a>
                     </div>
                         <div class="logout">
-                            <a href="index.html"><img src="images/user.png" alt="" title=""> Home</a>
+                            <a href="../adminhome.html"><img src="images/user.png" alt="" title=""> Home</a>
                         </div>
                 </div>
             </div>
@@ -76,7 +75,6 @@
                             </div>
                     </div>
                 </div>
-            </div>
             <script src="fetchAllAdhyayan.js"></script>
             <script src="../sessionstorage.js"></script>
         </body>
