--- a/4_adhyayanManagement/adhyayanManagement.html
+++ b/4_adhyayanManagement/adhyayanManagement.html
@@ -42,9 +42,8 @@
 								<div class="form">
 									<div class="row">
 									<div class="col-md-12">
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchAllAdhyayan.html">Fetch All Adhyayan</a>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="createAdhyayan.html">Add New Adhyayan</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="updateAdhyayan.html">Edit Existing Adhyayan</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchAllAdhyayan.html">Edit Existing Adhyayan</a>                                        
                                         <a class="btn col-md-12 btn-lg btn-demo" href="adhyayanReport.html">Adhyayan Report</a>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="adhyayanWaitlist.html">Adhyayan Waitlist Report</a>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="adhyayanStatusUpdate.html">Adhyayan Status Update</a>
