--- a/0_adminManagement/adminManagement.html
+++ b/0_adminManagement/adminManagement.html
@@ -43,13 +43,8 @@
 								<div class="form">
 									<div class="row">
 									<div class="col-md-12">
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchAllAdmins.html">Admin List</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="updateAdminRoles.html">Update Admin Roles</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="deactivateAdmin.html">Deactivate Admin</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="activateAdmin.html">Activate Admin</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="createRole.html">Create New Admin Role</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchRoles.html">Fetch All Admin Roles</a>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="deleteRole.html">Delete Admin Role</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchAllAdmins.html">Admin Users Management</a>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchRoles.html">Admin Roles  Management</a>
 									</div>	
                                 </form>
 							</div>
