--- a/0_adminManagement/fetchAllAdmins.html
+++ b/0_adminManagement/fetchAllAdmins.html
@@ -61,7 +61,7 @@
             <div class="inner-padding">
               <div class="frm-head">
                 <h1>
-                  <b><u>Admin List</u></b>
+                  <b><u>Admin User List</u></b>
                 </h1>
               </div>
               <div class="form">
@@ -83,6 +83,16 @@
                           <!-- Rows will be populated by JavaScript -->
                         </tbody>
                       </table>
+                      <div class="row">
+                        <div class="col-md-12">
+                          <button
+                            onclick="window.location.href='createAdmin.html'"
+                            class="btn btn-primary"
+                          >
+                            Add New Admin User
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
