--- a/0_adminManagement/createAdmin.html
+++ b/0_adminManagement/createAdmin.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="favicon.ico" />
-    <title>Fetch Roles</title>
+    <title>Create New Admin</title>
     <!-- Bootstrap core CSS -->
     <link
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
@@ -26,6 +26,7 @@
     <link href="../style/css/clockpicker.css" rel="stylesheet" />
     <link href="../style/css/style.css" rel="stylesheet" />
   </head>
+
   <body>
     <div
       class="fullheight"
@@ -59,39 +60,45 @@
           <div class="whitesec">
             <div class="inner-padding">
               <div class="frm-head">
-                <h1><br />Fetch Roles</h1>
+                <h1>
+                  <b><u>Create New Admin User</u></b>
+                </h1>
               </div>
               <div class="form">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="table">
-                      <table
-                        id="rolesList"
-                        class="table table-striped table-bordered"
-                      >
-                        <thead>
-                          <tr>
-                            <th>Roles List</th>
-                            <th>Action</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <!-- Rows will be populated by JavaScript -->
-                        </tbody>
-                      </table>
-                      <div class="row">
-                        <div class="col-md-12">
-                          <button
-                            onclick="window.location.href='createRole.html'"
-                            class="btn btn-primary"
-                          >
-                            Add New Admin Role
-                          </button>
-                        </div>
+                <form id="createAdminForm">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="username">Username</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="username"
+                          placeholder="Enter username"
+                          required
+                        />
                       </div>
                     </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="password">Password</label>
+                        <input
+                          type="password"
+                          class="form-control"
+                          id="password"
+                          placeholder="Enter password"
+                          required
+                        />
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <button type="submit" class="btn btn-success">
+                        Create Admin
+                      </button>
+                    </div>
                   </div>
-                </div>
+                </form>
+                <div id="statusMessage"></div>
               </div>
             </div>
           </div>
@@ -118,6 +125,6 @@
     <script src="../style/js/clockpicker.js"></script>
     <script src="../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
-    <script src="fetchRoles.js"></script>
+    <script src="createAdmin.js"></script>
   </body>
 </html>
