--- a/2_foodManagement/fetchPhysicalPlateIssued.html
+++ b/2_foodManagement/fetchPhysicalPlateIssued.html
@@ -54,35 +54,40 @@
         </div>
       </div>
       <div class="middlecontent">
-        <div class="whitesec">
-          <div class="frm-head">
-            <h1><br />Physical Plates Issued</h1>
-          </div>
-          <div class="form">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="table">
-                  <table
-                    id="physicalPlatesContainer"
-                    class="table table-striped table-bordered"
-                  >
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Type</th>
-                        <th>Count</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <!-- Rows will be populated by JavaScript -->
-                    </tbody>
-                  </table>
+        <div class="container">
+          <div class="whitesec">
+            <div class="inner-padding">
+              <div class="frm-head">
+                <h1><br />Physical Plates Issued</h1>
+              </div>
+              <div class="form">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="table">
+                      <table
+                        id="physicalPlatesContainer"
+                        class="table table-striped table-bordered"
+                      >
+                        <thead>
+                          <tr>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Count</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <!-- Rows will be populated by JavaScript -->
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <div class="footer">
         <div class="container">
           <p>
