gate mgmt and adhyayan mgmt

--- a/2_foodManagement/foodManagement.html
+++ b/2_foodManagement/foodManagement.html
@@ -46,8 +46,7 @@
 									<div class="row">
 									<div class="col-md-12">
 										<a class="btn col-md-12 btn-lg btn-demo" href="issuePlate.html">Issue Plate</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="physicalPlatesIssued.html">Physical Plates Issued</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchPhysicalPlateIssued.html">Fetch Physical Plate Issued</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchPhysicalPlateIssued.html"> Physical Plate Issued</a><br>
 										<a class="btn col-md-12 btn-lg btn-demo" href="bookFoodForMumukshu.html">Book Food For Mumukshu</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodByCard.html">Cancel Meal by Card</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodByMob.html">Cancel Meal by phone No</a><br>
@@ -55,10 +54,7 @@
                                         <a class="btn col-md-12 btn-lg btn-demo" href="cancelFoodForGuest.html">Cancel Food For Guest</a><br>
 										<a class="btn col-md-12 btn-lg btn-demo" href="foodReport.html">Food Report</a><br>
                                         <a class="btn col-md-12 btn-lg btn-demo" href="foodReportDetails.html">Food Report Details</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="addMenu.html">Add Menu</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchMenu.html">Fetch Menu</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="updateMenu.html">Update Menu</a><br>
-                                        <a class="btn col-md-12 btn-lg btn-demo" href="deleteMenu.html">Delete Menu</a><br>
+                                        <a class="btn col-md-12 btn-lg btn-demo" href="fetchMenu.html"> Menu Management</a><br>
 									</div>	
                                 </form>
 							</div>
