--- a/1_cardManagement/updateCard.html
+++ b/1_cardManagement/updateCard.html
@@ -33,9 +33,7 @@
             <a id="homelink" href="../index.html">Logout</a>
           </div>
           <div class="logout">
-            <a href="/1_cardManagement/cardManagement.html"
-              >Home &nbsp; | &nbsp;</a
-            >
+            <a href="/1_cardManagement/searchCard.html">Home &nbsp; | &nbsp;</a>
           </div>
           <div class="logout">
             <a href="/1_cardManagement/searchCard.html">Back &nbsp; | &nbsp;</a>
