--- a/2_foodManagement/fetchMenu.html
+++ b/2_foodManagement/fetchMenu.html
@@ -16,13 +16,7 @@
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
       rel="stylesheet"
     />
-    <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap"
-      rel="stylesheet"
-    />
     <link href="../style/css/plugin.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
     <link href="../style/css/clockpicker.css" rel="stylesheet" />
     <link href="../style/css/style.css" rel="stylesheet" />
   </head>
@@ -38,19 +32,19 @@
       <div class="header">
         <div class="container">
           <div class="logout">
-            <a id="homelink" href="../index.html">
-              <img alt="" title="" /> Logout
-            </a>
+            <a id="homelink" href="../index.html"
+              ><img alt="" title="" /> Logout</a
+            >
           </div>
           <div class="logout">
-            <a href="/adminhome.html">
-              <img alt="" title="" /> Home &nbsp; | &nbsp;
-            </a>
+            <a href="/adminhome.html"
+              ><img alt="" title="" /> Home &nbsp; | &nbsp;</a
+            >
           </div>
           <div class="logout">
-            <a href="/2_foodManagement/foodManagement.html">
-              <img alt="" title="" /> Back &nbsp; | &nbsp;
-            </a>
+            <a href="/2_foodManagement/foodManagement.html"
+              ><img alt="" title="" /> Back &nbsp; | &nbsp;</a
+            >
           </div>
         </div>
       </div>
@@ -66,6 +60,38 @@
             <div class="form">
               <div class="row">
                 <div class="col-md-12">
+                  <!-- Date Range Filter Form -->
+                  <form
+                    id="dateRangeForm"
+                    style="display: flex; align-items: center"
+                  >
+                    <label for="fromDate" style="margin-right: 5px"
+                      >From Date:</label
+                    >
+                    <input
+                      type="date"
+                      id="fromDate"
+                      name="fromDate"
+                      required
+                      style="margin-right: 10px"
+                    />
+
+                    <label for="toDate" style="margin-right: 5px"
+                      >To Date:</label
+                    >
+                    <input
+                      type="date"
+                      id="toDate"
+                      name="toDate"
+                      required
+                      style="margin-right: 5px"
+                    />
+
+                    <button type="submit" class="btn btn-primary">
+                      Filter
+                    </button>
+                  </form>
+                  <div><br /></div>
                   <div class="table">
                     <table
                       id="menuTable"
@@ -77,12 +103,23 @@
                           <th>Breakfast</th>
                           <th>Lunch</th>
                           <th>Dinner</th>
+                          <th>Action</th>
                         </tr>
                       </thead>
                       <tbody>
                         <!-- Menu rows will be populated by JavaScript -->
                       </tbody>
                     </table>
+                  </div>
+
+                  <!-- Add Menu Button -->
+                  <div class="add-menu-button">
+                    <button
+                      onclick="window.location.href='addMenu.html'"
+                      class="btn btn-primary"
+                    >
+                      Add Menu
+                    </button>
                   </div>
                 </div>
               </div>
