--- a/2_foodManagement/physicalPlatesIssued.html
+++ b/2_foodManagement/physicalPlatesIssued.html
@@ -1,5 +1,3 @@
-<!--food/dinnercheck_read--> 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +32,7 @@
             </a>
           </div>
           <div class="logout">
-            <a href="/2_foodManagement/foodManagement.html">
+            <a href="/2_foodManagement/fetchPhysicalPlateIssued.html">
               <img alt="" title="" /> Back &nbsp; | &nbsp;
             </a>
           </div>
@@ -45,34 +43,33 @@
             	<div class="whitesec">
                     <div class="inner-padding">
                     	<div class="frm-head">
-                          <h4><b><u>Physical Plates Issued</span></u></b></h4>
-							   </div>
-                               <div class="form" >
-                                <form id="physicalPlatesForm">
-									<div class="row">
-                    <div class="col-md-12">
-                    <label for="plateDate">Date:</label>
-                    <input type="date" id="plateDate" name="plateDate" required />
-                  </div>
-                  <div class="col-md-12">
-                    <label for="plateType">Plate Type:</label>
-                    <select id="plateType" name="plateType" required>
-                      <option value="breakfast">Breakfast</option>
-                      <option value="lunch">Lunch</option>
-                      <option value="dinner">Dinner</option>
-                      <option value="tea">Tea</option>
-                      <option value="coffee">Coffee</option>
-                    </select>
-                  </div>
-                  <div class="col-md-12">
-                    <label for="plateCount">Count:</label>
-                    <input type="number" id="plateCount" name="plateCount" min="1" required />
-                  </div>
-              
-                    <button type="submit">Add Physical Plates Issued</button>
-                                </form>
-                                <div id="responseMessage"></div>
-							</div>
+                          <h4><b><u>Physical Plates Issued</u></b></h4>
+					    </div>
+                        <div class="form">
+                            <form id="physicalPlatesForm">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label for="plateDate">Date:</label>
+                                        <input type="date" id="plateDate" name="plateDate" required />
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label for="breakfastCount">Breakfast Count:</label>
+                                        <input type="number" id="breakfastCount" name="breakfastCount" min="0" value="0" />
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label for="lunchCount">Lunch Count:</label>
+                                        <input type="number" id="lunchCount" name="lunchCount" min="0" value="0" />
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label for="dinnerCount">Dinner Count:</label>
+                                        <input type="number" id="dinnerCount" name="dinnerCount" min="0" value="0" />
+                                    </div>
+                                    <div class="text-center mt-3">
+                                        <button type="submit" class="btn btn-primary">Add Physical Plates Issued</button>
+                                    </div>
+                                </div>
+                            </form>
+                            <div id="responseMessage" class="mt-3"></div>
                         </div>
                     </div>
                 </div>
@@ -85,9 +82,7 @@
         </div>
     </div>
 </div>
-<!-- Bootstrap core JavaScript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<!-- Bootstrap core JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://use.fontawesome.com/373a347df2.js"></script>
 <script src="../style/js/plugin.js"></script>
