--- a/4_adhyayanManagement/fetchAllAdhyayan.html
+++ b/4_adhyayanManagement/fetchAllAdhyayan.html
@@ -55,33 +55,37 @@
       </div>
 
       <div class="middlecontent">
-        <div class="whitesec">
-          <div class="frm-head">
-            <h1><br />Upcoming Adhyayans at Research Center</h1>
-          </div>
-          <div class="form">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="table">
-                  <table
-                    id="adhyayanList"
-                    class="table table-striped table-bordered"
-                  >
-                    <thead>
-                      <tr>
-                        <th><center>Serial No</center></th>
-                        <th><center>Adhyayan Name</center></th>
-                        <th><center>Swadhyay Karta</center></th>
-                        <th><center>Start Date</center></th>
-                        <th><center>End Date</center></th>
-                        <th><center>Max Count</center></th>
-                        <th><center>Action</center></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <!-- Rows will be populated by JavaScript -->
-                    </tbody>
-                  </table>
+        <div class="container">
+          <div class="whitesec">
+            <div class="inner-padding">
+              <div class="frm-head">
+                <h1><br />Upcoming Adhyayans at Research Center</h1>
+              </div>
+              <div class="form">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="table">
+                      <table
+                        id="adhyayanList"
+                        class="table table-striped table-bordered"
+                      >
+                        <thead>
+                          <tr>
+                            <th><center>Serial No</center></th>
+                            <th><center>Adhyayan Name</center></th>
+                            <th><center>Swadhyay Karta</center></th>
+                            <th><center>Start Date</center></th>
+                            <th><center>End Date</center></th>
+                            <th><center>Max Count</center></th>
+                            <th><center>Action</center></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <!-- Rows will be populated by JavaScript -->
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
